--- a/shortly/index.html
+++ b/shortly/index.html
@@ -164,8 +164,8 @@
           </div>
         </div>
         <div class="flex flex-col md:flex-row items-stretch mt-30">
-          <div class="relative flex flex-col justify-center items-center bg-white shadow-5xl rounded-xl">
-            <div class="absolute md:left-10 -top-10 bg-black rounded-full">
+          <div class="relative flex flex-col justify-center items-center bg-olive-green-700 text-olive-green-50 shadow-5xl rounded-xl">
+            <div class="absolute md:left-10 -top-10 bg-olive-green-800 shadow-olive-green-400 shadow-2xl rounded-full">
               <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full">
                 <img src="images/icon-brand-recognition.svg" alt="" class="w-16">
               </div>
@@ -182,8 +182,8 @@
 
           <div class="md:mt-16 mx-auto bg-olive-green-900 h-20 md:h-4 w-4 md:w-32"></div>
 
-          <div class="relative flex flex-col justify-center items-center bg-white shadow-5xl rounded-xl md:translate-y-4">
-            <div class="absolute md:left-10 -top-10 bg-black rounded-full">
+          <div class="relative flex flex-col justify-center items-center bg-olive-green-700 text-olive-green-50 shadow-5xl rounded-xl md:translate-y-4">
+            <div class="absolute md:left-10 -top-10 bg-olive-green-800 shadow-olive-green-400 shadow-2xl rounded-full">
               <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full">
                 <img src="images/icon-detailed-records.svg" alt="" class="w-16">
               </div>
@@ -200,8 +200,8 @@
 
           <div class="md:mt-16 mx-auto bg-olive-green-900 h-20 md:h-4 w-4 md:w-32"></div>
 
-          <div class="relative flex flex-col justify-center items-center bg-white shadow-5xl rounded-xl md:translate-y-8">
-            <div class="absolute md:left-10 -top-10 bg-black rounded-full">
+          <div class="relative flex flex-col justify-center items-center bg-olive-green-700 text-olive-green-50 shadow-5xl rounded-xl md:translate-y-8">
+            <div class="absolute md:left-10 -top-10 bg-olive-green-800 shadow-olive-green-400 shadow-2xl rounded-full">
               <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full">
                 <img src="images/icon-fully-customizable.svg" alt="" class="w-16">
               </div>
